[package]
name = "web-refresh"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
crossbeam-channel = "0.4"
signal-hook = "0.1"
structopt = "0.3"
webdriver_client = "0.2"